# alfanous-core-rust

./: Cargo.toml  README.md  build_roots.py
data/: lemmas.json  roots.json
src/: db.rs  lib.rs  main.rs  normalize.rs  roots.rs  search.rs
src/parser/: lexer.rs  mod.rs
tests/: db_tests.rs  normalization_tests.rs  parser_tests.rs  search_tests.rs
tests/common/: mod.rs
